# TritonCTS

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  compileAll.sh  run.sh  runTritonCTS.tcl
doc/: Run_TritonCTS.md  Technology_characterization.md
jenkins/: Dockerfile.dev  build.sh  install.sh  test.sh
src/genLUT/: genLUT.sh  genLUTOpt2.tcl  prep_lut.tcl  run_all.tcl
src/genLUT/openSTA_template/: config.tcl  create_spef_files.tcl  genTest.tcl  run_sta.tcl  sta_proc.tcl
src/genLUT/template/: config.tcl  create_spef_files.tcl  genTest.tcl  pt_config.tcl  pt_proc.tbc  run_pt.tbc  run_soce.tbc  soce_config.tcl  sta_proc.tcl
src/genLoad/: gen_load_lib.tcl  temp_lump_cell.txt  temp_lump_header.txt
src/ghtree/: Makefile  argument.cpp  argument.h  clustering.cpp  clustering.h  design.cpp  design.h  main.cpp  mymeasure.cpp  mymeasure.h  mystring.cpp  mystring.h  tree.cpp  tree.h
src/scripts/: build_guides.py  die-area-hack.py  extract_locations.py  merge_guides.py  parse_sol.tcl  remove_dummies.py  router.param  run_chtree.tcl  scripts.new  update_def.py  verilog_preprocess.py
src/tech/: lut-45-nangate.txt  sol_list-45-nangate.txt  sol_list-7.txt
tests/: run_all.sh
tests/src/qor_test/: log.txt  out.txt  run.sh  sink_cap.txt  sol.py
tests/src/qor_test/golden/: log.txt
tests/src/simple_test/: cluster.sol  log.txt  out.txt  run.sh  seg.txt
tests/src/simple_test/golden/: sol_0.txt
